# monch

./: .gitignore  CMakeLists.txt  README.md
shaders/fragment/: font.glsl  fragment.glsl  texture.glsl
shaders/vertex/: vertex.glsl
src/monch/: main.cpp  util.h
src/monch/editor/app/: EditorApp.cpp  EditorApp.h  editor_actions.cpp  layout.cpp
src/monch/editor/rendered_character/: RenderedCharacter.cpp  RenderedCharacter.h
src/monch/editor/scrollable_area/: ScrollableArea.cpp  ScrollableArea.h
src/monch/editor/text_area/: TextArea.cpp  TextArea.h
src/monch/events/event/: Event.h
src/monch/events/manager/: EventManager.cpp  EventManager.h
src/monch/object/: Object.cpp  Object.h  find.cpp  invalidate.cpp  position.cpp  size.cpp
src/monch/object/event/: Event.cpp  Event.h
src/monch/rendering/: Vertex.h  gl.h
src/monch/rendering/container/: Container.cpp  Container.h
src/monch/rendering/font/font/: Font.h  ctor.cpp  dtor.cpp  get.cpp  load.cpp
src/monch/rendering/font/manager/: FontManager.h  ctor.cpp  dtor.cpp  font_path.h.in  get_font.cpp  singleton.cpp
src/monch/rendering/polygon/: Polygon.cpp  Polygon.h
src/monch/rendering/quad/: Quad.cpp  Quad.h
src/monch/rendering/quad/renderable/: RenderableQuad.cpp  RenderableQuad.h
src/monch/rendering/renderable/: Renderable.cpp  Renderable.h
src/monch/rendering/renderable/quad/: Quad.cpp  Quad.h
src/monch/rendering/renderer/: Renderer.cpp  Renderer.h  error.cpp  input_callbacks.cpp  shaders.cpp  shaders.h.in
src/monch/rendering/renderer/title_bar/: macos.mm  titlebar.h  x11.cpp
src/monch/rendering/vertex_buffer/: VertexBuffer.cpp  VertexBuffer.h
src/monch/rendering/window/: Window.cpp  Window.h
